--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1strepo</title>
+     <link rel="stylesheet" href="me.css">
 </head>
 <body>
     <h1>i can push github</h1>
     <h2>new code change</h2>
+    <p>more paragraph</p>
+    <p>i am coding coding coding</p>
 </body>
 </html>
