--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <link rel="stylesheet" href="me.css">
 </head>
 <body>
-    <h1>i can push github</h1>
-    <h2>new code change</h2>
+    <h1>i can push github.com</h1>
+    <h2>change html code. input new code.</h2>
     <p>more paragraph</p>
     <p>i am coding coding coding</p>
 </body>
