--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="me.css">
 </head>
 <body>
-    <h1>i can push github.com</h1>
+    <h1>i can push github.com and com</h1>
     <h2>change html code. input new code.</h2>
     <p>more paragraph</p>
     <p>i am coding coding coding</p>
