--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>i can push github.com and com</h1>
     <h2>change html code. input new code.</h2>
-    <p>more paragraph</p>
+    <p>more paragraph and more</p>
     <p>i am coding coding coding</p>
 </body>
 </html>
